vGutCompiler/ANTLR/cs/GrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.12.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Grammar.g4 by ANTLR 4.12.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.12.0")]
[System.CLSCompliant(false)]
public partial class GrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		NUMBERDCL=1, BOOLDCL=2, TEXTDCL=3, STRING=4, INTEGER=5, FLOAT=6, BOOL=7, 
		NULL=8, IF=9, THEN=10, ELSE=11, ENDIF=12, WHILE=13, ENDWHILE=14, DO=15, 
		AND=16, SUM=17, AVERAGE=18, VLOOKUP=19, MIN=20, MAX=21, SORT=22, COUNT=23, 
		OR=24, ASSIGN=25, LESSTHAN=26, GREATERTHAN=27, COMPEQUAL=28, LESSEQUAL=29, 
		GREATEREQUAL=30, NOTEQUAL=31, PLUS=32, MINUS=33, MULTIPLICATION=34, DIVISION=35, 
		MODULO=36, LPARENTHESIS=37, RPARENTHESIS=38, LSQUAREP=39, RSQUAREP=40, 
		LBRACKET=41, RBRACKET=42, COLON=43, COMMA=44, COMMENT=45, VAR=46, WS=47;
	public const int
		RULE_program = 0, RULE_declaration = 1, RULE_assignment = 2, RULE_ifstmt = 3, 
		RULE_whilestmt = 4, RULE_block = 5, RULE_sortingexpression = 6, RULE_expression = 7, 
		RULE_conditionalexpression = 8, RULE_sum = 9, RULE_average = 10, RULE_min = 11, 
		RULE_max = 12, RULE_count = 13, RULE_countif = 14, RULE_vlookup = 15, 
		RULE_sort = 16, RULE_constant = 17, RULE_types = 18;
	public static readonly string[] ruleNames = {
		"program", "declaration", "assignment", "ifstmt", "whilestmt", "block", 
		"sortingexpression", "expression", "conditionalexpression", "sum", "average", 
		"min", "max", "count", "countif", "vlookup", "sort", "constant", "types"
	};

	private static readonly string[] _LiteralNames = {
		null, "'number'", "'bool'", "'text'", null, null, null, null, "'null'", 
		"'if'", "'then'", "'else'", "'endif'", "'while'", "'endwhile'", "'do'", 
		"'AND'", "'SUM'", "'AVERAGE'", "'VLOOKUP'", "'MIN'", "'MAX'", "'SORT'", 
		"'COUNT'", "'OR'", "'='", "'<'", "'>'", "'=='", "'<='", "'>='", "'!='", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", "'['", "']'", "'{'", 
		"'}'", "':'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "NUMBERDCL", "BOOLDCL", "TEXTDCL", "STRING", "INTEGER", "FLOAT", 
		"BOOL", "NULL", "IF", "THEN", "ELSE", "ENDIF", "WHILE", "ENDWHILE", "DO", 
		"AND", "SUM", "AVERAGE", "VLOOKUP", "MIN", "MAX", "SORT", "COUNT", "OR", 
		"ASSIGN", "LESSTHAN", "GREATERTHAN", "COMPEQUAL", "LESSEQUAL", "GREATEREQUAL", 
		"NOTEQUAL", "PLUS", "MINUS", "MULTIPLICATION", "DIVISION", "MODULO", "LPARENTHESIS", 
		"RPARENTHESIS", "LSQUAREP", "RSQUAREP", "LBRACKET", "RBRACKET", "COLON", 
		"COMMA", "COMMENT", "VAR", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Grammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GrammarParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70368748380686L) != 0)) {
				{
				{
				State = 38;
				declaration();
				}
				}
				State = 43;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 44;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IfstmtContext ifstmt() {
			return GetRuleContext<IfstmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhilestmtContext whilestmt() {
			return GetRuleContext<WhilestmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SortingexpressionContext sortingexpression() {
			return GetRuleContext<SortingexpressionContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_declaration);
		try {
			State = 50;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IF:
				EnterOuterAlt(_localctx, 1);
				{
				State = 46;
				ifstmt();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 47;
				whilestmt();
				}
				break;
			case NUMBERDCL:
			case BOOLDCL:
			case TEXTDCL:
			case VAR:
				EnterOuterAlt(_localctx, 3);
				{
				State = 48;
				assignment();
				}
				break;
			case SORT:
				EnterOuterAlt(_localctx, 4);
				{
				State = 49;
				sortingexpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
	 
		public AssignmentContext() { }
		public virtual void CopyFrom(AssignmentContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AssignnewContext : AssignmentContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypesContext types() {
			return GetRuleContext<TypesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR() { return GetToken(GrammarParser.VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(GrammarParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConditionalexpressionContext conditionalexpression() {
			return GetRuleContext<ConditionalexpressionContext>(0);
		}
		public AssignnewContext(AssignmentContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignnew(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssigndecContext : AssignmentContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR() { return GetToken(GrammarParser.VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(GrammarParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConditionalexpressionContext conditionalexpression() {
			return GetRuleContext<ConditionalexpressionContext>(0);
		}
		public AssigndecContext(AssignmentContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssigndec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 4, RULE_assignment);
		try {
			State = 60;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBERDCL:
			case BOOLDCL:
			case TEXTDCL:
				_localctx = new AssignnewContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 52;
				types();
				State = 53;
				Match(VAR);
				State = 54;
				Match(ASSIGN);
				State = 55;
				conditionalexpression(0);
				}
				break;
			case VAR:
				_localctx = new AssigndecContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 57;
				Match(VAR);
				State = 58;
				Match(ASSIGN);
				State = 59;
				conditionalexpression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfstmtContext : ParserRuleContext {
		public IfstmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifstmt; } }
	 
		public IfstmtContext() { }
		public virtual void CopyFrom(IfstmtContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class IfthenContext : IfstmtContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(GrammarParser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConditionalexpressionContext conditionalexpression() {
			return GetRuleContext<ConditionalexpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode THEN() { return GetToken(GrammarParser.THEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDIF() { return GetToken(GrammarParser.ENDIF, 0); }
		public IfthenContext(IfstmtContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfthen(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfelseContext : IfstmtContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(GrammarParser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConditionalexpressionContext conditionalexpression() {
			return GetRuleContext<ConditionalexpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode THEN() { return GetToken(GrammarParser.THEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELSE() { return GetToken(GrammarParser.ELSE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDIF() { return GetToken(GrammarParser.ENDIF, 0); }
		public IfelseContext(IfstmtContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfelse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfstmtContext ifstmt() {
		IfstmtContext _localctx = new IfstmtContext(Context, State);
		EnterRule(_localctx, 6, RULE_ifstmt);
		try {
			State = 76;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				_localctx = new IfelseContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 62;
				Match(IF);
				State = 63;
				conditionalexpression(0);
				State = 64;
				Match(THEN);
				State = 65;
				block();
				State = 66;
				Match(ELSE);
				State = 67;
				block();
				State = 68;
				Match(ENDIF);
				}
				break;
			case 2:
				_localctx = new IfthenContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 70;
				Match(IF);
				State = 71;
				conditionalexpression(0);
				State = 72;
				Match(THEN);
				State = 73;
				block();
				State = 74;
				Match(ENDIF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhilestmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHILE() { return GetToken(GrammarParser.WHILE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConditionalexpressionContext conditionalexpression() {
			return GetRuleContext<ConditionalexpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DO() { return GetToken(GrammarParser.DO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDWHILE() { return GetToken(GrammarParser.ENDWHILE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public WhilestmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whilestmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhilestmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhilestmtContext whilestmt() {
		WhilestmtContext _localctx = new WhilestmtContext(Context, State);
		EnterRule(_localctx, 8, RULE_whilestmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			Match(WHILE);
			State = 79;
			conditionalexpression(0);
			State = 80;
			Match(DO);
			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70368748380686L) != 0)) {
				{
				{
				State = 81;
				declaration();
				}
				}
				State = 86;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 87;
			Match(ENDWHILE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 10, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70368748380686L) != 0)) {
				{
				{
				State = 89;
				declaration();
				}
				}
				State = 94;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SortingexpressionContext : ParserRuleContext {
		public SortingexpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sortingexpression; } }
	 
		public SortingexpressionContext() { }
		public virtual void CopyFrom(SortingexpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class SortexpressionContext : SortingexpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public SortContext sort() {
			return GetRuleContext<SortContext>(0);
		}
		public SortexpressionContext(SortingexpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSortexpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SortingexpressionContext sortingexpression() {
		SortingexpressionContext _localctx = new SortingexpressionContext(Context, State);
		EnterRule(_localctx, 12, RULE_sortingexpression);
		try {
			_localctx = new SortexpressionContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			sort();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class MaxexpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public MaxContext max() {
			return GetRuleContext<MaxContext>(0);
		}
		public MaxexpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMaxexpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AverageexpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public AverageContext average() {
			return GetRuleContext<AverageContext>(0);
		}
		public AverageexpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAverageexpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VarexpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR() { return GetToken(GrammarParser.VAR, 0); }
		public VarexpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarexpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VlookupexpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public VlookupContext vlookup() {
			return GetRuleContext<VlookupContext>(0);
		}
		public VlookupexpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVlookupexpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConstantexpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public ConstantexpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstantexpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SumexpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public SumContext sum() {
			return GetRuleContext<SumContext>(0);
		}
		public SumexpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSumexpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MinexpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public MinContext min() {
			return GetRuleContext<MinContext>(0);
		}
		public MinexpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMinexpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CountexpressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public CountContext count() {
			return GetRuleContext<CountContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CountifContext countif() {
			return GetRuleContext<CountifContext>(0);
		}
		public CountexpressionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCountexpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 14, RULE_expression);
		try {
			State = 108;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				_localctx = new SumexpressionContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 97;
				sum();
				}
				break;
			case 2:
				_localctx = new AverageexpressionContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 98;
				average();
				}
				break;
			case 3:
				_localctx = new VlookupexpressionContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 99;
				vlookup();
				}
				break;
			case 4:
				_localctx = new MinexpressionContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 100;
				min();
				}
				break;
			case 5:
				_localctx = new MaxexpressionContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 101;
				max();
				}
				break;
			case 6:
				_localctx = new CountexpressionContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 102;
				count();
				}
				break;
			case 7:
				_localctx = new VlookupexpressionContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 103;
				vlookup();
				}
				break;
			case 8:
				_localctx = new VarexpressionContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 104;
				Match(VAR);
				}
				break;
			case 9:
				_localctx = new CountexpressionContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 105;
				count();
				}
				break;
			case 10:
				_localctx = new CountexpressionContext(_localctx);
				EnterOuterAlt(_localctx, 10);
				{
				State = 106;
				countif();
				}
				break;
			case 11:
				_localctx = new ConstantexpressionContext(_localctx);
				EnterOuterAlt(_localctx, 11);
				{
				State = 107;
				constant();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
